Update repo url

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,7 @@
 	"description": "Link bible verses to bible verse references in editor",
 	"author": "Kevin Woods",
 	"homepage_url": "kevinwoods.info",
-	"repository_url": "kevinwoods.info",
+	"repository_url": "https://github.com/woody05/BibleVerse",
 	"keywords": ["bible", "verse", "link"],
 	"categories": ["productivity", "personal knowledge management"],
 	"screenshots": [
