--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
     "axios": "^1.12.2",
     "copy-webpack-plugin": "^13.0.1",
     "markdown-it": "^14.1.0"
