--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
 	"manifest_version": 1,
-	"id": "kevinwoods.info.BibleVerses",
+	"id": "joplin.plugin.BibleVerses",
 	"app_min_version": "3.3",
 	"version": "1.0.0",
 	"name": "Bible Verses",
@@ -8,7 +8,7 @@
 	"author": "Kevin Woods",
 	"homepage_url": "https://github.com/woody05/BibleVerse/wiki",
 	"repository_url": "https://github.com/woody05/BibleVerse",
-	"keywords": ["bible", "verse", "link"],
+	"keywords": ["bible", "verse", "link", "christian"],
 	"categories": ["productivity", "personal knowledge management"],
 	"screenshots": [
 
