--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,8 @@
 	"manifest_version": 1,
 	"id": "joplin.plugin.BibleVerses",
 	"app_min_version": "3.3",
-	"version": "1.0.0",
+	"app_min_version_mobile": "3.3",
+	"version": "1.0.2",
 	"name": "Bible Verses",
 	"description": "Link bible verses to bible verse references in editor",
 	"author": "Kevin Woods",
@@ -11,7 +12,10 @@
 	"keywords": ["bible", "verse", "link", "christian"],
 	"categories": ["productivity", "personal knowledge management"],
 	"screenshots": [
-
+		{
+        "src": "screen_shot.png",
+        "label": "Screen shot of the plugin"
+      }
 	],
 	"icons": {
 		"16": "icon16.png",
