--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,13 +3,13 @@
 	"id": "joplin.plugin.BibleVerses",
 	"app_min_version": "3.3",
 	"app_min_version_mobile": "3.3",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"name": "Bible Verses",
 	"description": "Link bible verses to bible verse references in editor",
 	"author": "Kevin Woods",
 	"homepage_url": "https://github.com/woody05/BibleVerse/wiki",
 	"repository_url": "https://github.com/woody05/BibleVerse",
-	"keywords": ["bible", "verse", "link", "christian"],
+	"keywords": ["bible", "verse", "link", "christian", "scripture"],
 	"categories": ["productivity", "personal knowledge management"],
 	"screenshots": [
 		{
