--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,9 @@
 {
 	"manifest_version": 1,
-	"id": "joplin.plugin.BibleVerses",
+	"id": "joplin-plugin-bible-verse",
 	"app_min_version": "3.3",
 	"app_min_version_mobile": "3.3",
-	"version": "1.0.5",
+	"version": "1.0.6",
 	"name": "Bible Verses",
 	"description": "Link bible verses to bible verse references in editor",
 	"author": "Kevin Woods",
