--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "joplin-plugin-bible-verse",
   "author": "Kevin Woods",
   "description": "Simple joplin plugin that pulls bible verse references and then add the bible verse to side panel",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "scripts": {
     "dist": "webpack --env joplin-plugin-config=buildMain && webpack --env joplin-plugin-config=buildExtraScripts && webpack --env joplin-plugin-config=createArchive",
     "prepare": "npm run dist",
@@ -14,8 +14,7 @@
     "joplin-plugin"
   ],
   "files": [
-    "publish",
-    "README.md"
+    "publish"
   ],
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.23.4",
