--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 1,
-	"id": "joplin.plugin.bible.verse",
+	"id": "com.joplin.plugin.bible.verse",
 	"app_min_version": "3.3",
-	"version": "1.0.9",
+	"version": "1.0.10",
 	"name": "Bible Verses",
 	"description": "Link bible verses to bible verse references in editor",
 	"author": "Kevin Woods",
@@ -10,15 +10,6 @@
 	"repository_url": "https://github.com/woody05/BibleVerse",
 	"keywords": ["bible", "verse", "link", "christian", "scripture"],
 	"categories": ["productivity", "personal knowledge management"],
-	"screenshots": [
-		{
-        "src": "screen_shot.png",
-        "label": "Screen shot of the plugin"
-      }
-	],
-	"icons": {
-
-	},
-	"promo_tile": "screen_shot.png",
+	"screenshots": [],
 	"platforms": ["desktop", "mobile"]
 }
