--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,15 +1,17 @@
 {
 	"manifest_version": 1,
-	"id": "com.joplin.plugin.bible.verse",
+	"id": "com.joplin.plugin.bible.verses",
 	"app_min_version": "3.3",
-	"version": "1.0.10",
+	"version": "1.0.11",
 	"name": "Bible Verses",
 	"description": "Link bible verses to bible verse references in editor",
 	"author": "Kevin Woods",
-	"homepage_url": "https://github.com/woody05/BibleVerse/wiki",
+	"homepage_url": "https://github.com/woody05/BibleVerse",
 	"repository_url": "https://github.com/woody05/BibleVerse",
 	"keywords": ["bible", "verse", "link", "christian", "scripture"],
 	"categories": ["productivity", "personal knowledge management"],
 	"screenshots": [],
-	"platforms": ["desktop", "mobile"]
+	"platforms": ["desktop", "mobile"],
+	"icons": {},
+	"promo_tile": {}
 }
