Update readme file and manifest

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,14 +2,14 @@
 	"manifest_version": 1,
 	"id": "com.joplin.plugin.bible.verses",
 	"app_min_version": "3.3",
-	"version": "1.0.11",
+	"version": "1.0.12",
 	"name": "Bible Verses",
 	"description": "Link bible verses to bible verse references in editor",
 	"author": "Kevin Woods",
 	"homepage_url": "https://github.com/woody05/BibleVerse",
 	"repository_url": "https://github.com/woody05/BibleVerse",
 	"keywords": ["bible", "verse", "link", "christian", "scripture"],
-	"categories": ["productivity", "personal knowledge management"],
+	"categories": ["productivity"],
 	"screenshots": [],
 	"platforms": ["desktop", "mobile"],
 	"icons": {},
