--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "joplin-plugin-bible-verse",
   "author": "Kevin Woods",
   "description": "Simple joplin plugin that pulls bible verse references and then add the bible verse to side panel",
-  "version": "1.0.12",
+  "version": "1.1.0",
   "scripts": {
     "dist": "webpack --env joplin-plugin-config=buildMain && webpack --env joplin-plugin-config=buildExtraScripts && webpack --env joplin-plugin-config=createArchive",
     "prepare": "npm run dist",
@@ -35,6 +35,7 @@
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
+    "@joplin/utils": "^3.5.1",
     "copy-webpack-plugin": "^13.0.1"
   }
 }
